syntax = "proto3";

package ztcp.auth.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string org_id = 3;
  string device_fingerprint = 4;
}

message RefreshRequest {
  string refresh_token = 1;
  string device_fingerprint = 2;
}

message RefreshResponse {
  oneof result {
    AuthResponse tokens = 1;
    MFARequired mfa_required = 2;
    PhoneRequired phone_required = 3;
  }
}

message LogoutRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
  string user_id = 4;
  string org_id = 5;
}

message MFARequired {
  string challenge_id = 1;
  string phone_mask = 2;
}

message PhoneRequired {
  string intent_id = 1;
}

message LoginResponse {
  oneof result {
    AuthResponse tokens = 1;
    MFARequired mfa_required = 2;
    PhoneRequired phone_required = 3;
  }
}

message VerifyMFARequest {
  string challenge_id = 1;
  string otp = 2;
}

message SubmitPhoneAndRequestMFARequest {
  string intent_id = 1;
  string phone = 2;
}

message SubmitPhoneAndRequestMFAResponse {
  string challenge_id = 1;
  string phone_mask = 2;
}

message LinkIdentityRequest {
  string user_id = 1;
  string provider = 2;
  string provider_id = 3;
  string id_token = 4;
}

message LinkIdentityResponse {
  string identity_id = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc VerifyMFA(VerifyMFARequest) returns (AuthResponse);
  rpc SubmitPhoneAndRequestMFA(SubmitPhoneAndRequestMFARequest) returns (SubmitPhoneAndRequestMFAResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc LinkIdentity(LinkIdentityRequest) returns (LinkIdentityResponse);
}
